--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Javarush TelegramBot
+bot.username=test_javarush_artem_bot
+bot.token=7259731611:AAEjyK4T7X0cbY1Uu7rV4uqTGpUptLC8guI
