added repository layer.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Javarush TelegramBot
 bot.username=test_javarush_artem_bot
 bot.token=7259731611:AAEjyK4T7X0cbY1Uu7rV4uqTGpUptLC8guI
+javarush.api.path=https://javarush.com/api/1.0/rest
